Shorten push banner text; fix share icon wrapping in iOS modal

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -584,10 +584,9 @@ a.btn-primary, button.btn-primary {
 
 .ios-share-icon {
   display: inline-block;
-  width: 16px;
-  height: 16px;
-  vertical-align: middle;
-  margin: 0 3px;
+  width: 14px;
+  height: 14px;
+  vertical-align: -2px;
   flex-shrink: 0;
 }
 
